--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="alert alert-info d-flex align-items-center" role="alert">
   <svg class="bi flex-shrink-0 me-2" role="img" aria-label="信息：" _mstaria-label="52741" _mstHash="232"><use xlink:href="#info-fill"></use></svg>
   <div _msttexthash="89259066" _msthash="233">
-    | 注意！当前 TPG 最新版本为 Test 0.4 版本
+    注意！当前 TPG 最新版本为 Test 0.4 版本
   </div>
 </div>
 <p>当前网站版本： Test 0.1</p>
