--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="GBK">
+    <title>跳转</title>
+    <style>
+      h1 {
+        font-size: 75px;
+        font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Verdana";
+      }
+    </style>
+  </head>
+  <script>
+    window.alert("既然你已经来到这里了……");
+    var a = window.confirm("你是否想回到原来的网页？");
+    if (a == true) {
+      location.href = "www.bing.com";
+    }
+    if (a == false) {
+      alert("那就待在这里吧");
+    }
+  </script>
+  <body>
+    <h1>404 Not Found</h1>
+    <p>Feng_Noti 7 With_Cout</p>
+  </body>
+</html>
