--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       h1 {
         font-size: 75px;
         font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Verdana";
+        text-align: center;
+      }
+      p {
+        font-size: 20px;
+        font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Verdana";
+        text-align: center;
       }
     </style>
   </head>
@@ -22,6 +28,6 @@
   </script>
   <body>
     <h1>404 Not Found</h1>
-    <p>Feng_Noti 7 With_Cout</p>
+    <p>Feng_Noti & With_Cout</p>
   </body>
 </html>
