--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     window.alert("既然你已经来到这里了……");
     var a = window.confirm("你是否想回到原来的网页？");
     if (a == true) {
-      location.href = "www.bing.com";
+      window.open("https://with-cout.github.io/TPG_Information/");
+      alert("接下来，你可以关闭该网页了");
     }
     if (a == false) {
       alert("那就待在这里吧");
