--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
   <body>
     <h1>404 Not Found</h1>
     <p>Feng_Noti & With_Cout</p>
+    <a href="https://with-cout.github.io/You_got_lost/">刷新该网页 (Refresh this website)</a>
   </body>
 </html>
