--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </script>
   <body>
     <h1>404 Not Found</h1>
-    <p>Feng_Noti & With_Cout</p>
+    <p>github.io</p>
     <a href="https://with-cout.github.io/You_got_lost/">刷新该网页 (Refresh this website)</a>
   </body>
 </html>
