--- a/index.html
+++ b/index.html
@@ -16,20 +16,12 @@
       }
     </style>
   </head>
-  <script>
-    window.alert("既然你已经来到这里了……");
-    var a = window.confirm("你是否想回到原来的网页？");
-    if (a == true) {
-      window.open("https://with-cout.github.io/TPG_Information/");
-      alert("接下来，你可以关闭该网页了");
-    }
-    if (a == false) {
-      alert("那就待在这里吧");
-    }
-  </script>
   <body>
-    <h1>404 Not Found</h1>
-    <p>github.io</p>
+    <h1>...</h1>
+    <textarea style="resize: none;" readonly>
+      I'm sorry.
+      .----. ----- ..... .----. .----. ----- .---- .----. .----. ..--- ....- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ..--- .----. .----. .---- ----- .----. .----. ..--- .---- .----. .----. ----- ....- .----. .----. ....- ---.. .----. .----. ----- ....- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ....- ---.. .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- --... .----. .----. ----- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- ....- .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. ----- -.... .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ----- ..--- .----. .----. .---- ----. .----. .----. ----- -.... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ---.. .----. .-.-.- .----. ----- ...-- .----. .----. ----- -.... .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- --... .----. .----. ..--- ..... .----. .----. ----- ----. .----. .----. .---- ----. .----. .-.-.- -....- -....- .----. .---- ---.. .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- ..... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ----. .----. .----. .---- ----- .----. .----. ----- ---.. .----. .----. ----- ..... .----. .----. ----- -.... .----. .----. ----- ..--- .----. .----. ----- ....- .----. .----. .---- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ----- .---- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ....- .----. -..-. .----. .---- -.... .----. .----. ..--- ..... .----. .----. ----- --... .----. .----. ..--- ....- .----. -..-. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ....- ---.. .----. .----. ----- ..... .----. .----. ..--- ----- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .-.-.-
+    </textarea>
     <a href="https://with-cout.github.io/You_got_lost/">刷新该网页 (Refresh this website)</a>
   </body>
 </html>
