--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="GBK">
-    <title>跳转</title>
+    <meta charset="utf-8">
+    <title>.</title>
     <style>
       h1 {
         font-size: 75px;
@@ -14,14 +14,32 @@
         font-family: "Microsoft YaHei UI", "Microsoft YaHei", "Verdana";
         text-align: center;
       }
+      textarea {
+        resize: none;
+      }
+      .fullscreen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        border: 10px solid black;  /* 边框示例 */
+      }
     </style>
   </head>
   <body>
     <h1>...</h1>
-    <textarea style="resize: none;" readonly>
+    <button type="button" id="fullscreenBtn">全屏</button>
+    <textarea id="txt" readonly>
       I'm sorry.
       .----. ----- ..... .----. .----. ----- .---- .----. .----. ..--- ....- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ..--- .----. .----. .---- ----- .----. .----. ..--- .---- .----. .----. ----- ....- .----. .----. ....- ---.. .----. .----. ----- ....- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ....- ---.. .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- --... .----. .----. ----- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- ....- .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. ----- -.... .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ----- ..--- .----. .----. .---- ----. .----. .----. ----- -.... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ---.. .----. .-.-.- .----. ----- ...-- .----. .----. ----- -.... .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- --... .----. .----. ..--- ..... .----. .----. ----- ----. .----. .----. .---- ----. .----. .-.-.- -....- -....- .----. .---- ---.. .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- ..... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ----. .----. .----. .---- ----- .----. .----. ----- ---.. .----. .----. ----- ..... .----. .----. ----- -.... .----. .----. ----- ..--- .----. .----. ----- ....- .----. .----. .---- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ----- .---- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ....- .----. -..-. .----. .---- -.... .----. .----. ..--- ..... .----. .----. ----- --... .----. .----. ..--- ....- .----. -..-. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ....- ---.. .----. .----. ----- ..... .----. .----. ..--- ----- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .-.-.-
     </textarea>
-    <a href="https://with-cout.github.io/You_got_lost/">刷新该网页 (Refresh this website)</a>
+    <script>
+      document.getElementById("fullscreenBtn").addEventListener("click", function() {
+        var textarea = document.getElementById("txt");
+        textarea.classList.toggle("fullscreen");
+      });
+    </script>
   </body>
 </html>
