--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   </head>
   <body>
     <h1>...</h1>
-    <button type="button" id="fullscreenBtn">全屏</button>
     <textarea id="txt" readonly>
       I'm sorry.
       .----. ----- ..... .----. .----. ----- .---- .----. .----. ..--- ....- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ..--- .----. .----. .---- ----- .----. .----. ..--- .---- .----. .----. ----- ....- .----. .----. ....- ---.. .----. .----. ----- ....- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ....- ---.. .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- --... .----. .----. ----- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- ....- .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. ----- -.... .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .----. ----- ..... .----. .----. ----- ..--- .----. .----. .---- ----. .----. .----. ----- -.... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ---.. .----. .-.-.- .----. ----- ...-- .----. .----. ----- -.... .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- --... .----. .----. ..--- ..... .----. .----. ----- ----. .----. .----. .---- ----. .----. .-.-.- -....- -....- .----. .---- ---.. .----. .----. ----- -.... .----. .----. .---- ...-- .----. .----. ----- ..... .----. .----. ----- .---- .----. .----. ----- ..... .----. .----. ----- ----. .----. .----. .---- ----- .----. .----. ----- ---.. .----. .----. ----- ..... .----. .----. ----- -.... .----. .----. ----- ..--- .----. .----. ----- ....- .----. .----. .---- ....- .----. --..-- .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ----- .---- .----. .----. ----- -.... .----. .----. ..--- ..... .----. .----. .---- ....- .----. -..-. .----. .---- -.... .----. .----. ..--- ..... .----. .----. ----- --... .----. .----. ..--- ....- .----. -..-. .----. ----- ---.. .----. .----. .---- .---- .----. .----. ----- ....- .----. .----. ----- ..--- .----. .----. ----- ---.. .----. .----. ..--- ....- .----. -....- .----. ....- ---.. .----. .----. ----- ..... .----. .----. ..--- ----- .----. .----. ----- ---.. .----. .----. .---- ..--- .----. .-.-.-
     </textarea>
     <script>
-      document.getElementById("fullscreenBtn").addEventListener("click", function() {
-        var textarea = document.getElementById("txt");
-        textarea.classList.toggle("fullscreen");
-      });
+      // document.getElementById("fullscreenBtn").addEventListener("click", function() {
+      //   var textarea = document.getElementById("txt");
+      //   textarea.classList.toggle("fullscreen");
+      // });
+      /* No need to write a script in this junk. =) */
     </script>
   </body>
 </html>
